[metadata]
name = networking_f5_ml2
summary = This project tracks the work to provide a simple integration of VMware DVS networking with Neutron.
version = 2015.1.1
description-file =
    README.rst
license = Apache License, Version 2.0
author = SAP SE
author-email = andrew.battye@sap.com
home-page = http://www.sap.com/
url = https://github.com/sapcc/networking-f5-ml2
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
keywords = openstack neutron F5 ML2 networking

[files]
packages = networking_f5_ml2data_files =
    /etc/neutron/plugins/ml2 =
        etc/neutron/plugins/ml2/ml2_conf_f5.ini

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_f5_ml2/locale
domain = networking_f5_ml2

[update_catalog]
domain = networking_f5_ml2
output_dir = networking_f5_ml2/locale
input_file = networking_f5_ml2/locale/networking-f5-ml2.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_f5_ml2/locale/networking-f5-ml2.pot

[entry_points]
console_scripts =
    neutron-f5-ml2-agent = networking_f5_ml2.plugins.ml2.drivers.mech_f5.agent.entry_point:main
neutron.ml2.mechanism_drivers =
    f5ml2 = networking_f5_ml2.plugins.ml2.drivers.mech_f5.driver:F5MechanismDriver
